text transform experiments

--- a/exercises/haiku-generator-new/css/style.css
+++ b/exercises/haiku-generator-new/css/style.css
@@ -14,7 +14,7 @@ span:hover {
 }
 
 #main-text {
-  margin-left: 50px;
+  /* margin-left: 50px; */
   padding: 250px;
   font-family: "Orbitron";
   font-size: 25px;
