--- a/experiments/jquery-ui-interactions/css/style.css
+++ b/experiments/jquery-ui-interactions/css/style.css
@@ -1,6 +1,34 @@
-/*********************************************
+#prison {
+  /* dimensions of the prison */
+  width: 50vw;
+  height: 50vw;
+  /* the prison walls */
+  border: 10px dashed black;
+  /* css grid fro alignment of elements in the prison */
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
 
-Here is a description of any special CSS used.
-By default that's nothing.
+#prisoner {
+  font-size: 2rem;
+}
 
-**********************************************/
+#escape-tunnel {
+  /* tunnel dimensions */
+  width: 10vw;
+  height: 10vw;
+  /* tunnel outline */
+  border: 2px dashed black;
+  /* make it a circle */
+  border-radius: 100%;
+  /* use css grid to align the label in it */
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+
+.prisoner-dragging {
+  color: #85bb65;
+  font-weight: bold;
+}
