--- a/activities/07-code-taker/css/style.css
+++ b/activities/07-code-taker/css/style.css
@@ -1,6 +1,6 @@
-/*********************************************
-
-Here is a description of any special CSS used.
-By default that's nothing.
-
-**********************************************/
+#answer {
+  height: 2rem;
+  margin-top: 2rem;
+  font-size: 3rem;
+  border: 1px solid black;
+}
