--- a/projects/project2-prototype/css/style.css
+++ b/projects/project2-prototype/css/style.css
@@ -1,65 +1,36 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: #003151;
+  background: #133250;
 }
 
 .container {
   background: #133250;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
+  /* height: 20vh;
+  width: 50vh; */
+  display: block;
+  position: fixed;
+  padding: 250px 250px;
   justify-content: center;
   align-items: center;
 }
 
-#launch-pad {
-  background: #091827;
-  width: 75%;
-  height: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  /* border-radius: 4%; */
-  /* box-shadow: 0px 5px 40px 10px black; */
-}
-
 #pad-container {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-self: flex-end;
+  background: blue;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  row-gap: 0.5em;
+  column-gap: 0.5em;
 }
 
 .drum-pad {
-  background: #287aa4;
-  height: 10%;
-  width: 50%;
-  border: solid 2px;
-  border-bottom: 2;
-  padding-top: 1%;
-  margin-left: 1%;
-  margin-right: 2%;
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
-}
-
-.drum-pad-hover {
-  /* background: #2f8ebe; */
-  color: white;
-  transition: all linear 0.4s;
-}
-
-.drum-pad-clicked {
-  background: salmon;
-  height: 10%;
-  width: 50%;
-  border: solid 2px;
-  padding-top: 1%;
-  margin-left: 1%;
-  margin-right: 2%;
+  background: radial-gradient(#35a1d3, #287aa4);
+  justify-content: center;
+  height: 100px;
+  width: 100px;
+  border: 10px solid #16181c;
   font-weight: bold;
   text-align: center;
   cursor: pointer;
