--- a/projects/project2-prototype2/css/style.css
+++ b/projects/project2-prototype2/css/style.css
@@ -1,11 +1,22 @@
 html {
+  background-color: #000000;
   padding: 0;
   margin: 0;
 }
 
 #mixer-box {
   background-color: grey;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   border-radius: 70%;
+}
+
+.crystal-img {
+  width: 100px;
+  opacity: 0.5;
+}
+
+.crystal-img2 {
+  width: 100px;
+  opacity: 0.5;
 }
