--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -10,21 +10,16 @@ body {
 }
 
 #container {
-  background-color: grey;
+  background-color: black;
   display: block;
   position: absolute;
   width: 100%;
   height: 100%;
-  /* margin: 10px; */
   padding: 10px;
-  /* margin-top: 70px;
-  margin-bottom: 20px; */
-  margin-left: auto;
   margin-right: auto;
-  /* height: 50vw;
-  width: 90vw; */
-  color: white;
-  /* border: 2px solid; */
+  /* height: 50vw; */
+  /* width: 90vw; */
+  /* border: 2px solid white; */
   justify-content: center;
   align-items: center;
 }
@@ -38,7 +33,7 @@ body {
   padding-top: 20vh;
 }
 
-.texts {
+.icons {
   /* display: inline-block; */
   position: relative;
   display: block;
@@ -84,7 +79,7 @@ body {
 
 #ghost {
   position: absolute;
-  width: 70vw;
+  width: 1000px;
   left: 300px;
   z-index: 6;
   opacity: 0;
@@ -116,7 +111,7 @@ body {
 }
 
 #swing {
-  position: relative;
+  position: absolute;
   padding: 20px;
   width: 15vw;
   left: 500px;
@@ -126,7 +121,7 @@ body {
 
 #smoke {
   position: relative;
-  width: 30vw;
+  width: 90vw;
   left: 200px;
   z-index: 1;
   opacity: 0;
