--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -38,6 +38,7 @@ body {
   /* display: inline-block; */
   position: relative;
   display: block;
+  /* margin: 30px; */
   padding-left: 20px;
   color: #e3f2ff;
   width: 43px;
