--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -1,151 +1,145 @@
-. {
+html,
+body {
   margin: 0px;
   padding: 0px;
 }
 
 body {
   background-color: white;
-  margin: 0px;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
 }
 
 #wrapper {
   background-color: black;
-  display: block;
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 10px;
-  margin-right: auto;
-  /* height: 50vw; */
-  /* width: 90vw; */
-  /* border: 2px solid white; */
   justify-content: center;
   align-items: center;
 }
 
 .images {
-  width: 300px;
   opacity: 0;
 }
 
 #click-icons-container {
   position: absolute;
-  display: block;
+  padding-left: 10px;
   padding-top: 20vh;
+  /* transform: translate(0%, 50%); */
 }
 
 #image-container {
-  display: block;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+  border: 5px solid red;
+  /* background-color: #38a97c; */
+
   padding: 64px;
 }
 
 .icons {
   /* display: inline-block; */
-  position: relative;
   display: block;
-  /* margin: 30px; */
+  position: relative;
   padding-left: 20px;
   color: #e3f2ff;
-  width: 43px;
   height: 1px;
   font-size: 40px;
   cursor: pointer;
 }
 
-.scenes-text {
-  position: absolute;
-  color: white;
-  text-align: center;
-  font-size: 50px;
-  /* z-index: 3; */
-  top: 500px;
-  left: 1100px;
-  opacity: 0;
-}
-
-/* #scene-1 {
-  top: 1100px;
-  left: 400px;
-} */
-
 #tree {
   position: fixed;
-  top: 10px;
+  top: -30px;
   left: 600px;
   width: 80vw;
-  opacity: 0;
+  max-width: 70vw;
+  min-width: 1000px;
+
   z-index: 1;
 }
+
+#mothEye {
+  position: fixed;
+  top: -30px;
+  left: 200px;
+  width: 30vw;
+  max-width: 40vw;
+  min-width: 500px;
+  z-index: 2;
+}
+
+/* #fire {
+  position: fixed;
+  width: 50vw;
+  top: 50px;
+  left: 200px;
+  z-index: 3;
+} */
 
 #fire {
   position: fixed;
-  width: 700px;
-  left: 500px;
-}
-
-/* #face {
-  position: absolute;
-  width: 1000px;
-  z-index: 7;
-  opacity: 0;
-} */
-
-/* #ghost {
-  position: absolute;
-  width: 1000px;
-  left: 300px;
-  z-index: 6;
-  opacity: 0;
+  top: 50px;
+  left: 400px;
+  width: 55vw;
+  max-width: 55vw;
+  min-width: 900px;
+  z-index: 10;
 }
 
 #walker {
-  position: absolute;
+  position: fixed;
+  top: 50px;
+  left: 200px;
   width: 40vw;
-  left: 300px;
+  max-width: 40vw;
+  min-width: 500px;
   z-index: 3;
-  opacity: 0;
+}
+
+#wingedMan {
+  position: fixed;
+  top: 300px;
+  left: 500px;
+  width: 30vw;
+  max-width: 40vw;
+  min-width: 500px;
+  z-index: 2;
 }
 
 #sun {
-  position: absolute;
-  width: 45vw;
-  left: 500px;
-  z-index: 5;
-  opacity: 0;
 }
 
-#moth {
+#swingFigure {
   position: absolute;
-  top: -300px;
-  left: 200px;
-  width: 1300px;
+  left: 600px;
+  width: 300px;
   z-index: 3;
-  opacity: 0;
 }
 
-#swing {
-  position: absolute;
-  padding: 20px;
-  width: 15vw;
-  left: 500px;
-  z-index: 4;
-  opacity: 0;
+#skyBg {
+  position: fixed;
+  width: 1700px;
+  z-index: 1;
+}
+
+#darkPlanet {
 }
 
 #smoke {
-  position: relative;
-  width: 90vw;
-  left: 200px;
-  z-index: 1;
-  opacity: 0;
 }
 
-#city {
+#whiteMoth {
+}
+
+#crystal {
   position: absolute;
-  width: 10vw;
-  top: 400px;
-  left: 200px;
+  width: 1300px;
   z-index: 2;
-  opacity: 0;
-} */
+}
