P2: added a basic random function for x position of the elements

--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -59,8 +59,10 @@ body {
   font-weight: bold;
 }
 
-.active {
-  color: red;
+.active,
+.active:hover {
+  color: #007a99;
+  /* color: #99ebff; */
 }
 
 .disabled {
