--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -54,8 +54,14 @@ body {
   cursor: pointer;
 }
 
-.icons:hover {
+/* .icons:hover {
   color: #e6f7fb;
+  font-weight: bold;
+} */
+
+.over {
+  color: #72a6b4;
+
   font-weight: bold;
 }
 
@@ -106,7 +112,7 @@ body {
   width: 55vw;
   max-width: 55vw;
   min-width: 900px;
-  z-index: 10;
+  z-index: 12;
 }
 
 #walker {
