--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -8,7 +8,7 @@ body {
   background-color: white;
   width: 100%;
   height: 100%;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 #wrapper {
@@ -37,10 +37,26 @@ body {
   bottom: 10px;
   left: 10px;
   right: 10px;
-  /* border: 1px solid #bc0909; */
   border: 1px solid grey;
 
   padding: 64px;
+}
+
+/* #text {
+  display: flex;
+  margin-top: 200px;
+  height: 30wv;
+  margin: auto;
+  align-items: center;
+} */
+
+#quote {
+  color: white;
+  font-size: 1vw;
+  font-family: Teko;
+  letter-spacing: 1px;
+  text-align: center;
+  opacity: 0.7;
 }
 
 .icons {
@@ -84,7 +100,7 @@ body {
   max-width: 70vw;
   min-width: 1000px;
 
-  z-index: 1;
+  z-index: 10;
 }
 
 #mothEye {
@@ -92,8 +108,8 @@ body {
   top: -30px;
   left: 200px;
   width: 30vw;
-  max-width: 40vw;
-  min-width: 500px;
+  max-width: 45vw;
+  min-width: 700px;
   z-index: 2;
 }
 
@@ -105,7 +121,7 @@ body {
   z-index: 3;
 } */
 
-#fire {
+/* #fire {
   position: fixed;
   top: 50px;
   left: 400px;
@@ -113,11 +129,20 @@ body {
   max-width: 55vw;
   min-width: 900px;
   z-index: 12;
+} */
+
+#fire {
+  position: fixed;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30vw;
+  z-index: 3;
 }
 
 #walker {
   position: fixed;
-  top: 50px;
+  top: 1px;
   left: 200px;
   width: 40vw;
   max-width: 40vw;
@@ -163,7 +188,7 @@ body {
 #swingFigure {
   position: fixed;
   left: 600px;
-  width: 300px;
+  width: 250px;
   z-index: 3;
 }
 
@@ -183,10 +208,17 @@ body {
   z-index: 9;
 }
 
-#smoke {
+/* #smoke {
   position: fixed;
   width: 30vw;
   z-index: 3;
+} */
+
+#smoke {
+  position: fixed;
+  top: 400px;
+  width: 90vw;
+  z-index: 1;
 }
 
 #whiteMoth {
@@ -196,7 +228,7 @@ body {
   z-index: 3;
 }
 
-#crystal {
+#ghost {
   position: fixed;
   width: 90vw;
   z-index: 2;
