--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -42,23 +42,6 @@ body {
   padding: 64px;
 }
 
-/* #text {
-  display: flex;
-  margin-top: 200px;
-  height: 30wv;
-  margin: auto;
-  align-items: center;
-} */
-
-#quote {
-  color: white;
-  font-size: 1vw;
-  font-family: Teko;
-  letter-spacing: 1px;
-  text-align: center;
-  opacity: 0.7;
-}
-
 .icons {
   /* display: inline-block; */
   display: block;
@@ -214,7 +197,7 @@ body {
   z-index: 3;
 } */
 
-#smoke {
+#city {
   position: fixed;
   top: 400px;
   width: 90vw;
@@ -230,6 +213,7 @@ body {
 
 #ghost {
   position: fixed;
+  bottom: 10px;
   width: 90vw;
   z-index: 2;
 }
