--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 body {
-  background-color: white;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -20,15 +19,10 @@ body {
   align-items: center;
 }
 
-.images {
-  opacity: 0;
-}
-
 #click-icons-container {
   position: absolute;
   padding-left: 10px;
   padding-top: 20vh;
-  /* transform: translate(0%, 50%); */
 }
 
 #image-container {
@@ -38,12 +32,14 @@ body {
   left: 10px;
   right: 10px;
   border: 1px solid grey;
-
   padding: 64px;
 }
 
+.images {
+  opacity: 0;
+}
+
 .icons {
-  /* display: inline-block; */
   display: block;
   position: relative;
   padding-left: 20px;
@@ -60,7 +56,6 @@ body {
 
 .over {
   color: #72a6b4;
-
   font-weight: bold;
 }
 
@@ -68,53 +63,36 @@ body {
 .active:hover {
   color: #007a99;
   font-weight: bold;
-  /* color: #99ebff; */
-}
-
-.disabled {
-  color: yellow;
 }
 
 #tree {
   position: fixed;
-  top: -30px;
-  left: 600px;
-  width: 80vw;
-  max-width: 70vw;
+  top: -80px;
+  left: 620px;
+  width: 60vw;
+  max-width: 60vw;
   min-width: 1000px;
-
   z-index: 10;
 }
 
+/* #mothEye {
+  position: fixed;
+  top: 60px;
+  left: 1000px;
+  width: 23vw;
+  max-width: 15vw;
+  min-width: 200px;
+  z-index: 10;
+} */
+
 #mothEye {
   position: fixed;
-  top: -30px;
-  left: 200px;
-  width: 30vw;
-  max-width: 45vw;
-  min-width: 700px;
+  bottom: 10px;
+  width: 90vw;
   z-index: 2;
 }
 
-/* #fire {
-  position: fixed;
-  width: 50vw;
-  top: 50px;
-  left: 200px;
-  z-index: 3;
-} */
-
-/* #fire {
-  position: fixed;
-  top: 50px;
-  left: 400px;
-  width: 55vw;
-  max-width: 55vw;
-  min-width: 900px;
-  z-index: 12;
-} */
-
-#fire {
+#smoke {
   position: fixed;
   display: block;
   margin-left: auto;
@@ -127,8 +105,8 @@ body {
   position: fixed;
   top: 1px;
   left: 200px;
-  width: 40vw;
-  max-width: 40vw;
+  width: 35vw;
+  max-width: 35vw;
   min-width: 500px;
   z-index: 6;
 }
@@ -136,19 +114,20 @@ body {
 #wingedMan {
   position: fixed;
   top: 300px;
-  left: 700px;
-  width: 90vw;
-  max-width: 40vw;
+  left: 600px;
+  width: 40vw;
+  max-width: 35vw;
   min-width: 500px;
   z-index: 10;
 }
 
 #sun {
   position: fixed;
-  left: 700px;
+  top: 20px;
+  left: 650px;
   width: 25vw;
-  max-width: 30vw;
-  min-width: 200px;
+  max-width: 25vw;
+  min-width: 250px;
   z-index: 9;
 }
 
@@ -170,8 +149,10 @@ body {
 
 #swingFigure {
   position: fixed;
-  left: 600px;
-  width: 250px;
+  left: 500px;
+  width: 12vw;
+  max-width: 12vw;
+  min-width: 200px;
   z-index: 3;
 }
 
@@ -184,9 +165,10 @@ body {
 
 #darkPlanet {
   position: fixed;
-  left: 300px;
-  width: 14vw;
-  max-width: 16vw;
+  top: 200px;
+  left: 200px;
+  width: 10;
+  max-width: 10vw;
   min-width: 200px;
   z-index: 9;
 }
@@ -200,14 +182,18 @@ body {
 #city {
   position: fixed;
   top: 400px;
+  /* right: 100px; */
   width: 90vw;
   z-index: 1;
 }
 
 #whiteMoth {
   position: fixed;
-  left: 600px;
-  width: 300px;
+  top: 400px;
+  left: 200px;
+  width: 13vw;
+  max-width: 13vw;
+  min-width: 200px;
   z-index: 3;
 }
 
