--- a/projects/project2-test/css/style.css
+++ b/projects/project2-test/css/style.css
@@ -49,11 +49,6 @@ body {
   cursor: pointer;
 }
 
-/* .icons:hover {
-  color: #e6f7fb;
-  font-weight: bold;
-} */
-
 .over {
   color: #72a6b4;
   font-weight: bold;
@@ -75,38 +70,28 @@ body {
   z-index: 10;
 }
 
-/* #mothEye {
-  position: fixed;
-  top: 60px;
-  left: 1000px;
-  width: 23vw;
-  max-width: 15vw;
-  min-width: 200px;
-  z-index: 10;
-} */
-
-#mothEye {
+#ghostInverted {
   position: fixed;
   bottom: 10px;
-  width: 90vw;
+  left: 100px;
+  width: 85vw;
   z-index: 2;
 }
 
 #smoke {
   position: fixed;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 30vw;
-  z-index: 3;
+  width: 17vw;
+  max-width: 17vw;
+  min-width: 300px;
+  z-index: 11;
 }
 
 #walker {
   position: fixed;
   top: 1px;
   left: 200px;
-  width: 35vw;
-  max-width: 35vw;
+  width: 31vw;
+  max-width: 31vw;
   min-width: 500px;
   z-index: 6;
 }
@@ -118,7 +103,7 @@ body {
   width: 40vw;
   max-width: 35vw;
   min-width: 500px;
-  z-index: 10;
+  z-index: 11;
 }
 
 #sun {
@@ -167,17 +152,11 @@ body {
   position: fixed;
   top: 200px;
   left: 200px;
-  width: 10;
-  max-width: 10vw;
+  width: 13vw;
+  max-width: 13vw;
   min-width: 200px;
   z-index: 9;
 }
-
-/* #smoke {
-  position: fixed;
-  width: 30vw;
-  z-index: 3;
-} */
 
 #city {
   position: fixed;
@@ -187,19 +166,20 @@ body {
   z-index: 1;
 }
 
+#ghost {
+  position: fixed;
+  bottom: 10px;
+  left: 100px;
+  width: 85vw;
+  z-index: 2;
+}
+
 #whiteMoth {
   position: fixed;
   top: 400px;
   left: 200px;
-  width: 13vw;
-  max-width: 13vw;
+  width: 11vw;
+  max-width: 11vw;
   min-width: 200px;
   z-index: 3;
-}
-
-#ghost {
-  position: fixed;
-  bottom: 10px;
-  width: 90vw;
-  z-index: 2;
 }
